# logdev_assistant

./: .flake8  Makefile  README.md  config.json  example.json  logdev_chatbot.py  pyproject.toml
.github/: pull_request_template.yaml
assets/: Kelpy-Codos.js  custom.css  custom.js  external-scripts.js
configs/: ds_config_chatbot.json
locale/: extract_locale.py
logdev/: base_model.py  config.py  constants.py  llama_func.py  overwrites.py  pdf_func.py  shared.py  utils.py  webui_locale.py
logdev/chat_models/: base_model.py  models.py
