[tool.poetry]
name = "logdev-assistant"
version = "0.1.1"
description = "LogDev Assistant Platform"
authors = ["anhphong22 <aws.phongnt@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "logdev_assistant"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
pandas = "^2.0.1"
langchain = "^0.0.152"
gradio = "^3.28.0"
duckduckgo-search = "^2.8.6"
pypdf2 = "^3.0.1"
pdfplumber = "^0.9.0"
commentjson = "^0.9.0"
pygments = "^2.15.1"
markdown = "^3.4.3"
openpyxl = "^3.1.2"
colorama = "^0.4.6"
llama-index = "0.5.5"
mdtex2html = "^1.2.0"
tiktoken = "^0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
